<resources>
    <string name="app_name">Watch Users And Posts</string>

    <string name="address">"Address: "</string>
    <string name="email">"Email: "</string>
    <string name="username">"Username: "</string>
    <string name="name">"Name: "</string>
    <string name="title">"Title: "</string>
    <string name="body">"Body: "</string>
    <string name="comments">"Comments: "</string>
    <string name="text">"Text: "</string>
    <string name="users">Users</string>
    <string name="posts">Posts</string>
    <string name="Item_post_expand_arrow">Expand arrow</string>
    <string name="User_posts_fragment_no_id">"ID of users wasn't passed"</string>
</resources>
