<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_user_container_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/item_user_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/item_user_tv_label_name"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Name" />

    <TextView
        android:id="@+id/item_user_tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/item_user_tv_label_username"
        app:layout_constraintTop_toBottomOf="@id/item_user_tv_name"
        tools:text="Username" />

    <TextView
        android:id="@+id/item_user_tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/item_user_tv_label_email"
        app:layout_constraintTop_toBottomOf="@id/item_user_tv_username"
        tools:text="user@example.com" />

    <TextView
        android:id="@+id/item_user_tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/item_user_tv_label_address"
        app:layout_constraintTop_toBottomOf="@id/item_user_tv_email"
        tools:text="Sity, Street, Suite" />

    <TextView
        android:id="@+id/item_user_tv_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/name"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_user_tv_label_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/username"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_user_tv_label_name" />

    <TextView
        android:id="@+id/item_user_tv_label_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/email"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_user_tv_label_username" />

    <TextView
        android:id="@+id/item_user_tv_label_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/address"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_user_tv_label_email" />

</androidx.constraintlayout.widget.ConstraintLayout>
