<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_post_container_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="15dp">

    <TextView
        android:id="@+id/item_post_label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/title"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_post_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintStart_toEndOf="@id/item_post_label_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Hieol" />

    <TextView
        android:id="@+id/item_post_label_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/body"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_post_label_title" />

    <TextView
        android:id="@+id/item_post_body"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/item_post_label_body"
        app:layout_constraintTop_toBottomOf="@id/item_post_title"
        tools:text="Hlsdkk dsloosdk djsjdjdp djsjdujd hhhhhhhhhhhhhhhhhhhh yuyuyuyu ifigifg" />

    <TextView
        android:id="@+id/item_post_label_comments_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/comments"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_post_comments_count" />

    <TextView
        android:id="@+id/item_post_comments_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@id/item_post_label_comments_count"
        app:layout_constraintTop_toBottomOf="@id/item_post_body"
        tools:text="25"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/item_post_pb_comments"
        style="?android:attr/progressBarStyle"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@id/item_post_label_comments_count"
        app:layout_constraintStart_toEndOf="@id/item_post_label_comments_count"
        app:layout_constraintTop_toTopOf="@id/item_post_label_comments_count" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/item_post_rv_comment_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_post_label_comments_count"
        tools:listitem="@layout/item_comment"
        tools:visibility="visible">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageView
        android:id="@+id/item_post_iv_expand_arrow"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginEnd="32dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/item_post_label_comments_count"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/item_post_label_comments_count"
        app:srcCompat="@mipmap/ic_arrow"
        tools:visibility="visible"
        android:contentDescription="@string/Item_post_expand_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>
